--- a/package.json
+++ b/package.json
@@ -1,16 +1,15 @@
 {
   "name": "typescript-agi",
-  "version": "0.0.1",
+  "version": "0.0.5",
   "description": "NodeJS TypeScript Library for Asterisk AGI Interfaces",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
   "scripts": {
     "build": "./node_modules/.bin/tsc",
     "docs": "./node_modules/.bin/typedoc && touch docs/.nojekyll",
-    "docs-server": "./node_modules/.bin/http-server docs",
     "fix-style": "./node_modules/.bin/tslint -c tslint.json --project . --fix",
-    "host-docs": "npm run docs && npm run docs-server",
     "install": "npm run build",
+    "prepublishOnly": "npm run build",
     "style": "./node_modules/.bin/tslint -c tslint.json --project .",
     "test": "npm run style && npm run build"
   },
@@ -30,7 +29,5 @@
   "bugs": {
     "url": "https://github.com/brandonlehmann/typescript-agi/issues"
   },
-  "dependencies": {
-    "http-server": "^0.12.1"
-  }
+  "dependencies": {}
 }
