--- a/package.json
+++ b/package.json
@@ -8,9 +8,7 @@
   "scripts": {
     "build": "./node_modules/.bin/tsc",
     "docs": "./node_modules/.bin/typedoc && touch docs/.nojekyll",
-    "fix-style": "./node_modules/.bin/tslint -c tslint.json --project . --fix",
-    "prepare": "npm run build",
-    "style": "./node_modules/.bin/tslint -c tslint.json --project .",
+    "style": "./node_modules/.bin/eslint .",
     "test": "npm run style && npm run build"
   },
   "author": "Fábio Theodoro <fabio@ipcom.com.br>",
