--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,15 +1,18 @@
 {
   "compilerOptions": {
-    "target": "es6",
-    "lib": [
-      "es2017",
-      "dom",
-      "scripthost"
-    ],
-    "module": "commonjs",
-    "declaration": true,
-    "outDir": "./dist",
+    "target": "ESNext",
+    "module": "ESNext",
+    "moduleResolution": "node",
+    "outDir": "dist",
+    "rootDir": "src",
     "strict": true,
-    "downlevelIteration": true
-  }
+    "esModuleInterop": true,
+    "skipLibCheck": true,
+    "forceConsistentCasingInFileNames": true,
+    "declaration": true,
+    "declarationMap": true,
+    "declarationDir": "dist/types",
+    "removeComments": false
+  },
+  "include": ["src/**/*", "src/index.d.ts"]
 }
